# scraper-service

./: .cursorrules  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LEAD_MACHINE_INTEGRATION_CHECKLIST.md  README.md  docker-compose.prod.yml  docker-compose.yml  project.portfolio.json  pyproject.toml  requirements.txt
deploy/: apply-netdata-health-on-vps.sh
deploy/netdata-health/: load_average.conf  ram_usage.conf  reboot_notify.conf
docs/: api.md  client-integration.md  deploy.md  geoserra-profiles.md  places-cursor-implementation.md  places-google-maps-plan.md  places-usage-guide.md
nginx/: scraper.conf
scripts/: deploy.sh  generate-api-key.py  places-smoke.sh
src/: auth.py  config.py  main.py
src/engine/: extractors.py  fetcher.py  selectors.py  service.py
src/engine/places/: browser.py  google_maps.py
src/lib/: cache.py  quota.py  ratelimit.py  reaper.py  redis_client.py
src/routes/: health.py  jobs.py  places.py  scrape.py
src/schemas/: job.py  places.py  scrape.py
src/workers/: places_tasks.py  shared.py  spider_tasks.py  tasks.py  webhook.py
tests/: test_auth.py  test_jobs.py  test_scrape.py
tests/fixtures/: maps_place_panel.html
tests/integration/: test_places_job.py  test_places_route.py
tests/unit/: test_browser.py  test_places_engine.py  test_quota.py  test_search_places_cache_quota.py
