[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scraper-service"
version = "0.1.0"
description = "Central Scrapling-powered scraping service for portfolio projects."
requires-python = ">=3.12"
dependencies = [
  "scrapling[fetchers]>=0.4.7,<0.5.0",
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
  "pydantic>=2.10.0,<3.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "redis>=5.2.0,<6.0.0",
  "arq>=0.26.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
